--- a/report.html
+++ b/report.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 Home</title> 
+    <title>Project Report</title> 
 </head>
 
 <style>
@@ -26,19 +26,19 @@
         line-height: 3em;
     }
 
-    .current{
-        font-size: 2em;
-    }
-
 </style>
 
 <body>
-    <h1>Project Test</h1>
-    <ul>
-        <li><a href="http://blog.twenty7.me/blog1.html" target="_blank">Week #1</a></li>
+    <h1>Project Report</h1>
+    <ol>
+        <li>I made my website for my Dungeons and Dragons group. We have been playing together for 
+          about two years and frequently have friends join our campaign as guests or sometimes permanently. This website
+          will help new players catch up with the lore and characters of our world. Plus it can serve as a reference for 
+          existing players. 
+        </li>
         <li><a href="http://blog.twenty7.me/blog2.html" target="_blank">Week #2</a></li>
-        <li class = "current"><a href="http://blog.twenty7.me/blog3.html" target="_blank">Week #3</a></li>
-    </ul>
+        <li><a href="http://blog.twenty7.me/blog3.html" target="_blank">Week #3</a></li>
+    </ol>
 
 </body>
 </html>
