--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     body {
         font-family: 'Raleway', sans-serif;
         font-size: 2em;
-        background: rgb(239,251,255);
+        background-image: url("/images/Idrium.jpg");
         background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
         margin: 0
+        
     }
 
     main {
@@ -35,7 +36,7 @@
     h1{
         font-size: 2.5em;
         font-family: 'Tangerine', cursive;
-        
+        font-weight: bold;
     }
 
     h1,h2,p {
@@ -92,15 +93,15 @@
         themselves the <span class="keyword">Garden</span>. 
     </p>
 
-    <h2>Meet the Heroes:</h2>
+    <h2>Meet the Heroes</h2>
 
     <div class="gallery">
-        <img src="/images/miya.png" alt = "Miya Areno">
-        <img src="/images/doc_token.png" alt = "Doc Swatcher">
-        <img src="/images/jared.png" alt = "Jared Lacey">
-        <img src="/images/dudo.png" alt = "Dudo Perudo">
-        <img src="/images/olek.png" alt = "Olek">
-        <img src="/images/crow.png" alt = "Crow Revache">
+        <a href="http://project1.twenty7.me/miya.html"><img src="/images/miya.png" alt = "Miya Areno"></a>
+        <a href="http://project1.twenty7.me/doc.html"><img src="/images/doc_token.png" alt = "Doc Swatcher"></a>
+        <a href="http://project1.twenty7.me/jared.html"><img src="/images/jared.png" alt = "Jared Lacey"></a>
+        <a href="http://project1.twenty7.me/dudo.html"><img src="/images/dudo.png" alt = "Dudo Perudo"></a>
+        <a href="http://project1.twenty7.me/olek.html"><img src="/images/olek.png" alt = "Olek"></a>
+        <a href="http://project1.twenty7.me/crow.html"><img src="/images/crow.png" alt = "Crow Revache"></a>
     </div>
 
     </main>
