First draft of stat blocks, page backgrounds

--- a/crow.html
+++ b/crow.html
@@ -7,8 +7,11 @@
   <title>Crow Revache</title>
   <link rel="stylesheet" href="character-page.css">
   <style>
-  .info{
-    font-size: 0.63em;
+    body{
+      background: linear-gradient(180deg, rgba(8,21,52,1) 0%, rgba(238,243,255,1) 100%);
+    }
+    .info{
+      font-size: 0.63em;
   }
 </style>
 </head>
@@ -22,6 +25,16 @@
     <p>Alignment: Lawful Evil</p>
   </div>
   <p class="tagline">The blind man with big plans</p>
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span>??</span></li>
+      <li>Dexterity: <span>??</span></li>
+      <li>Constitution: <span>??</span></li>
+      <li>Intelligence: <span>??</span></li>
+      <li>Wisdom: <span>??</span></li>
+      <li>Charisma: <span>??</span></li>
+    </ul>
+  </div>
   <p class = "bio">
     Crow is the founder of the Garden and the party’s main adversary. Having escaped several bouts against our heroes, 
     it seems Crow is always one step ahead. A smooth talker, he was once able to convince the party he was an ally, merely 
