--- a/doc.html
+++ b/doc.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doc Swatcher</title>
   <link rel="stylesheet" href="character-page.css">
+  <style>
+    body {
+      background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -17,6 +22,18 @@
     <p>Alignment: Neutral Good</p>
   </div>
   <p class="tagline">The quick-thinking old-timer</p>
+
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span>12</span></li>
+      <li>Dexterity: <span>14</span></li>
+      <li>Constitution: <span class="statvalhigh">16</span></li>
+      <li>Intelligence: <span class="statvalhigh">20</span></li>
+      <li>Wisdom: <span>12</span></li>
+      <li>Charisma: <span>10</span></li>
+    </ul>
+  </div>
+
   <p class = "bio">
     Ashamed for almost causing his young nephew Jared’s death, Victor “Doc” Swatcher escaped to a quiet life on the island-city Typhon 
     where he worked on a shipping vessel as a shipwright. That is until his ship was invaded by pirates thieving for a magic suit of armor. 
