--- a/dudo.html
+++ b/dudo.html
@@ -7,6 +7,9 @@
   <title>Dudo Perudo</title>
   <link rel="stylesheet" href="character-page.css">
   <style>
+    body{
+      background: linear-gradient(180deg, rgba(40,122,47,1) 0%, rgba(238,255,240,1) 100%);
+    }
     img{
       width: 50%;
     }
@@ -22,6 +25,16 @@
     <p>Alignment: Chaotic Neutral</p>
   </div>
   <p class="tagline">The natural-born assassin</p>
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span>12</span></li>
+      <li>Dexterity: <span class="statvalhigh">20</span></li>
+      <li>Constitution: <span>12</span></li>
+      <li>Intelligence: <span>13</span></li>
+      <li>Wisdom: <span class="statvallow">4</span></li>
+      <li>Charisma: <span>11</span></li>
+    </ul>
+  </div>
   <p class = "bio">
     Not much is known of Dudo’s origins. He keeps the truths of his past hidden, even to his closest friends. Wherever he came from, 
     it was likely his paranoia that drove him out. What he can’t hide are his skills. Dudo moves like a shadow, leaving his enemies 
@@ -29,7 +42,7 @@
   </p>
 
   <p class = "quote">
-    “Everyone’s got a poison. Not everyone gets to pick.” -Dudo Perudo
+    “Everyone’s got a poison. Not everyone gets to pick.” &emsp;&emsp;-Dudo Perudo
   </p>
 </main>
 </body>
