--- a/jared.html
+++ b/jared.html
@@ -7,6 +7,9 @@
   <title>Jared Lacey</title>
   <link rel="stylesheet" href="character-page.css">
   <style>
+    body {
+      background: linear-gradient(180deg, rgba(68,79,230,1) 0%, rgba(242,238,255,1) 100%);
+    }
     img{
       width: 50%;
       padding: 1em;
@@ -23,6 +26,16 @@
     <p>Alignment: Chaotic Good</p>
   </div>
   <p class="tagline">The well-meaning troubled teen</p>
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span>12</span></li>
+      <li>Dexterity: <span>15</span></li>
+      <li>Constitution: <span>15</span></li>
+      <li>Intelligence: <span>13</span></li>
+      <li>Wisdom: <span>12</span></li>
+      <li>Charisma: <span class="statvalhigh">20</span></li></li>
+    </ul>
+  </div>
   <p class = "bio">
     As a child, Jared was deathly ill. His mother, a powerful sorceress, made a pact with a demon; trading Jared’s soul for his father’s. 
     His uncle Doc was furious that his brother was being sacrificed, ignorant of the full situation, and nearly disrupted the ritual, which 
