--- a/miya.html
+++ b/miya.html
@@ -7,6 +7,9 @@
   <title>Miya Areno</title>
   <link rel="stylesheet" href="character-page.css">
   <style>
+    body {
+      background: linear-gradient(180deg, rgba(28,83,85,1) 0%, rgba(230,244,242,1) 100%);
+    }
     .info{
       font-size: 0.8em;
     }
@@ -22,6 +25,17 @@
     <p>Alignment: Lawful Good</p>
   </div>
   <p class="tagline">The level-headed leader</p>
+  
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span>15</span></li>
+      <li>Dexterity: <span>12</span></li>
+      <li>Constitution: <span>14</span></li>
+      <li>Intelligence: <span>12</span></li>
+      <li>Wisdom: <span class="statvalhigh">16</span></li>
+      <li>Charisma: <span>12</span></li>
+    </ul>
+  </div>
   <p class = "bio">
     Miya studied law in Farrowdale before her beloved was killed in front of her by a demented witch. Miya channeled 
     her grief and anger into a drive to protect the weak, devoting herself to Tyr: the god of justice. Miya’s no-nonsense 
