--- a/olek.html
+++ b/olek.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Olek</title>
   <link rel="stylesheet" href="character-page.css">
+  <style>
+    body{
+      background: linear-gradient(180deg, rgba(157,112,58,1) 0%, rgba(255,245,238,1) 100%);
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -17,6 +22,16 @@
     <p>Alignment: Lawful Neutral</p>
   </div>
   <p class="tagline">The powerhouse chef</p>
+  <div class = "stats">
+    <ul>
+      <li>Strength: <span class="statvalhigh">20</span></li>
+      <li>Dexterity: <span>12</span></li>
+      <li>Constitution: <span class="statvalhigh">17</span></li>
+      <li>Intelligence: <span class="statvallow">9</span></li>
+      <li>Wisdom: <span>12</span></li>
+      <li>Charisma: <span>10</span></li>
+    </ul>
+  </div>
   <p class = "bio">
     Olek was born to a wandering tribe of careful Tortle. For as long as he can remember, he never fit in. He was constantly criticized for 
     his clumsiness. Eventually, having had enough, he ran away from home on a journey to find real civilization. He had to learn to provide 
