--- a/index.html
+++ b/index.html
@@ -6,99 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1 Home</title>
+    <link rel="stylesheet" href="homepage.css">
 </head>
-
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@700&display=swap');
-    body {
-        font-family: 'Raleway', sans-serif;
-        font-size: 2em;
-        /*background-image: url("/images/Idrium.jpg");*/
-        /*background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);*/
-        background-color: #242527;
-        margin: 0
-        
-    }
-
-    main {
-        width: 50%;
-        min-height: 100vh;
-        margin: 0 auto;
-        padding: 5px;
-        box-sizing: border-box;
-        border-color: black;
-        border-width: 3px;
-        border-style: solid;
-        border-top-style: none;
-        border-bottom-style: none;
-        background-color: white;
-    }
-
-    h1{
-        font-size: 2.5em;
-        font-family: 'Tangerine', cursive;
-        font-weight: bold;
-        padding: 0.5em;
-    }
-
-    h1,h2,p {
-        text-align: center;
-    }
-
-    li{
-        font-size: 1.5em;
-        line-height: 3em;
-    }
-
-    .current{
-        font-size: 2em;
-    }
-
-    p{
-        font-size: 1em;
-        margin: 10vh;
-    }
-
-    .keyword {
-        font-weight: bold;
-    }
-
-    .gallery{
-        text-align: center;
-        padding: 2vh;
-    }
-
-    img{
-        transition: .3s ease;
-    }
-
-    img:hover {
-        opacity: 0.5;
-    }
-
-    .bracer:hover {
-        opacity: 1;
-    }
-
-    .bracer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 50%;
-        margin:0 auto;
-    }
-
-    text{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        opacity: 0;
-    }
-
-</style>
-
 <body>
     <main>
+    <nav>
+        <ul class = "menus">
+            <li class = "menu">
+                <div class="menu-heading">Home</div>
+            </li>
+            <li class = "menu">
+                <div class="menu-heading">Characters</div>
+                <ul class="menu-items">
+                    <li class="menu-item"><a href="http://project1.twenty7.me/miya.html">Miya&emsp;&emsp;&nbsp;&nbsp;</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/doc.html">Doc</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/jared.html">Jared</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/dudo.html">Dudo</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/olek.html">Olek</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/crow.html">Crow</a></li>
+                  </ul>
+            </li>
+            <li class = "menu">
+                <div class="menu-heading">Apply</div>
+            </li>
+        </ul>
+    </nav>
+
     <h1>The Mystery of the Red Flower</h1>
     <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
     <p>
