--- a/miya.html
+++ b/miya.html
@@ -17,6 +17,27 @@
 </head>
 <body>
   <main>
+    <nav>
+      <ul class = "menus">
+          <li class = "menu">
+              <div class="menu-heading"><a href="http://project1.twenty7.me/index.html">Home</a></div>
+          </li>
+          <li class = "menu">
+              <div class="menu-heading">Characters</div>
+              <ul class="menu-items">
+                  <li class="menu-item"><a href="http://project1.twenty7.me/miya.html">Miya&emsp;&emsp;&nbsp;&nbsp;</a></li>
+                  <li class="menu-item"><a href="http://project1.twenty7.me/doc.html">Doc</a></li>
+                  <li class="menu-item"><a href="http://project1.twenty7.me/jared.html">Jared</a></li>
+                  <li class="menu-item"><a href="http://project1.twenty7.me/dudo.html">Dudo</a></li>
+                  <li class="menu-item"><a href="http://project1.twenty7.me/olek.html">Olek</a></li>
+                  <li class="menu-item"><a href="http://project1.twenty7.me/crow.html">Crow</a></li>
+                </ul>
+          </li>
+          <li class = "menu">
+              <div class="menu-heading">Apply</div>
+          </li>
+      </ul>
+  </nav>
   <h1>Miya Areno</h1>
   <img src="/images/miya_full.png" alt = "Miya Areno">
   <div class="info">
@@ -27,13 +48,13 @@
   <p class="tagline">The level-headed leader</p>
   
   <div class = "stats">
-    <ul>
-      <li>Strength: <span>15</span></li>
-      <li>Dexterity: <span>12</span></li>
-      <li>Constitution: <span>14</span></li>
-      <li>Intelligence: <span>12</span></li>
-      <li>Wisdom: <span class="statvalhigh">16</span></li>
-      <li>Charisma: <span>12</span></li>
+    <ul class = "statlist">
+      <li class = "statlist-item">Strength: <span>15</span></li>
+      <li class = "statlist-item">Dexterity: <span>12</span></li>
+      <li class = "statlist-item">Constitution: <span>14</span></li>
+      <li class = "statlist-item">Intelligence: <span>12</span></li>
+      <li class = "statlist-item">Wisdom: <span class="statvalhigh">16</span></li>
+      <li class = "statlist-item">Charisma: <span>12</span></li>
     </ul>
   </div>
   <p class = "bio">
