Created CSS folder

--- a/miya.html
+++ b/miya.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miya Areno</title>
-  <link rel="stylesheet" href="character-page.css">
+  <link rel="stylesheet" href="css/character-page.css">
   <style>
     body {
       background: linear-gradient(180deg, rgba(28,83,85,1) 0%, rgba(230,244,242,1) 100%);
