--- a/doc.html
+++ b/doc.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doc Swatcher</title>
-  <link rel="stylesheet" href="character-page.css">
+  <link rel="stylesheet" href="css/character-page.css">
   <style>
     body {
       background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
