--- a/dudo.html
+++ b/dudo.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dudo Perudo</title>
-  <link rel="stylesheet" href="character-page.css">
+  <link rel="stylesheet" href="css/character-page.css">
   <style>
     body{
       background: linear-gradient(180deg, rgba(40,122,47,1) 0%, rgba(238,255,240,1) 100%);
