--- a/jared.html
+++ b/jared.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jared Lacey</title>
-  <link rel="stylesheet" href="character-page.css">
+  <link rel="stylesheet" href="css/character-page.css">
   <style>
     body {
       background: linear-gradient(180deg, rgba(68,79,230,1) 0%, rgba(242,238,255,1) 100%);
