--- a/olek.html
+++ b/olek.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Olek</title>
-  <link rel="stylesheet" href="character-page.css">
+  <link rel="stylesheet" href="css/character-page.css">
   <style>
     body{
       background: linear-gradient(180deg, rgba(157,112,58,1) 0%, rgba(255,245,238,1) 100%);
