header, form/survey structure

--- a/crow.html
+++ b/crow.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crow Revache</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
   <style>
     body{
       background: linear-gradient(180deg, rgba(8,21,52,1) 0%, rgba(238,243,255,1) 100%);
@@ -34,10 +35,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Crow Revache</h1>
   <img src="/images/crow_full.png" alt = "Crow Revache">
   <div class="info">
