--- a/doc.html
+++ b/doc.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doc Swatcher</title>
   <link rel="stylesheet" href="css/character-page.css">
-  <style>
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>  <style>
     body {
       background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
     }
@@ -31,10 +31,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Doc Swatcher</h1>
   <img src="/images/doc_full.png" alt = "Doc Swatcher">
   <div class="info">
