--- a/dudo.html
+++ b/dudo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dudo Perudo</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
   <style>
     body{
       background: linear-gradient(180deg, rgba(40,122,47,1) 0%, rgba(238,255,240,1) 100%);
@@ -34,10 +35,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Dudo Perudo</h1>
   <img src="/images/dudo_full.jpg" alt = "Dudo Perudo">
   <div class="info">
@@ -63,7 +65,7 @@
   </p>
 
   <p class = "quote">
-    “Everyone’s got a poison. Not everyone gets to pick.” &emsp;&emsp;-Dudo Perudo
+    “Everyone’s got a poison. Not everyone gets to pick.” -Dudo Perudo
   </p>
 </main>
 </body>
