--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1 Home</title>
     <link rel="stylesheet" href="css/homepage.css">
+    <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
 </head>
 <body>
     <main>
     <nav>
         <ul class = "menus">
             <li class = "menu">
-                <div class="menu-heading">Home</div>
+                <div class="menu-heading"><a href="http://project1.twenty7.me/index.html">Home</a></div>
             </li>
             <li class = "menu">
                 <div class="menu-heading">Characters</div>
@@ -27,12 +28,13 @@
                   </ul>
             </li>
             <li class = "menu">
-                <div class="menu-heading">Apply</div>
+                <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
             </li>
         </ul>
     </nav>
 
-    <h1>The Mystery of the Red Flower</h1>
+    <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
+    <figcaption>A Dungeons & Dragons: 5e Campaign</figcaption>
     <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
     <p>
         In the world of <span class="keyword">Idrium</span>, evil goes unchecked save for the brave men and women aligned with the <span class="keyword">Bracers</span>. These 
