--- a/jared.html
+++ b/jared.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jared Lacey</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
   <style>
     body {
       background: linear-gradient(180deg, rgba(68,79,230,1) 0%, rgba(242,238,255,1) 100%);
@@ -35,10 +36,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Jared Lacey</h1>
   <img src="/images/jared.png" alt = "Jared Lacey">
   <div class="info">
