--- a/olek.html
+++ b/olek.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Olek</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
   <style>
     body{
       background: linear-gradient(180deg, rgba(157,112,58,1) 0%, rgba(255,245,238,1) 100%);
@@ -31,10 +32,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Olek</h1>
   <img src="/images/olek_full.png" alt = "Olek">
   <div class="info">
