--- a/miya.html
+++ b/miya.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miya Areno</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
   <style>
     body {
       background: linear-gradient(180deg, rgba(28,83,85,1) 0%, rgba(230,244,242,1) 100%);
@@ -34,10 +35,11 @@
                 </ul>
           </li>
           <li class = "menu">
-              <div class="menu-heading">Apply</div>
+            <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
           </li>
       </ul>
   </nav>
+  <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
   <h1>Miya Areno</h1>
   <img src="/images/miya_full.png" alt = "Miya Areno">
   <div class="info">
@@ -47,8 +49,7 @@
   </div>
   <p class="tagline">The level-headed leader</p>
   
-  <div class = "stats">
-    <ul class = "statlist">
+<ul class = "statlist">
       <li class = "statlist-item">Strength: <span>15</span></li>
       <li class = "statlist-item">Dexterity: <span>12</span></li>
       <li class = "statlist-item">Constitution: <span>14</span></li>
@@ -56,7 +57,7 @@
       <li class = "statlist-item">Wisdom: <span class="statvalhigh">16</span></li>
       <li class = "statlist-item">Charisma: <span>12</span></li>
     </ul>
-  </div>
+
   <p class = "bio">
     Miya studied law in Farrowdale before her beloved was killed in front of her by a demented witch. Miya channeled 
     her grief and anger into a drive to protect the weak, devoting herself to Tyr: the god of justice. Miya’s no-nonsense 
