--- a/report.html
+++ b/report.html
@@ -6,37 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Report</title> 
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
 </head>
-
-<style>
-    body {
-        font-family: 'Helvetica', sans-serif;
-        background-color:rgb(255, 149, 149);
-        margin: 3em;
-    }
-
-    h1{
-        text-decoration-line: underline;
-        text-decoration-line: white;
-        text-decoration-style: solid;
-    }
-
-    li{
-        font-size: 1em;
-    }
-
-</style>
-
 <body>
+    <main>
+    <nav>
+        <ul class = "menus">
+            <li class = "menu">
+                <div class="menu-heading">Home</div>
+            </li>
+            <li class = "menu">
+                <div class="menu-heading">Characters</div>
+                <ul class="menu-items">
+                    <li class="menu-item"><a href="http://project1.twenty7.me/miya.html">Miya&emsp;&emsp;&nbsp;&nbsp;</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/doc.html">Doc</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/jared.html">Jared</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/dudo.html">Dudo</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/olek.html">Olek</a></li>
+                    <li class="menu-item"><a href="http://project1.twenty7.me/crow.html">Crow</a></li>
+                  </ul>
+            </li>
+            <li class = "menu">
+                <div class="menu-heading"><a href="http://project1.twenty7.me/survey.html">Apply</a></div>
+              </li>
+        </ul>
+    </nav>
     <h1>Project Report</h1>
+    <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
     <ol>
-        <li>I made my website for my Dungeons and Dragons group. We have been playing together for 
+        <li>
+            I made my website for my Dungeons and Dragons group. We have been playing together for 
           about two years and frequently have friends join our campaign as guests or sometimes permanently. This website
           will help new players catch up with the lore and characters of our world. Plus it can serve as a reference for 
           existing players. 
         </li>
-        <li><a href="http://blog.twenty7.me/blog2.html" target="_blank">Week #2</a></li>
-        <li><a href="http://blog.twenty7.me/blog3.html" target="_blank">Week #3</a></li>
+        <li>
+            Some of the images here were created by my. Others are in the public domain.
+            Almost all text was written by me, though some was borrowed from friends (such as the quotes).
+        </li>
+        <li>I have eight pages on the site if you count this one.</li>
+        <li>There is a header on each page which features the title of our game and a picture of our headquarters.</li>
+        <li>I have a nav-bar across each page.</li>
+        <li>I use a media query to remove the side columns on small screens.</li>
+        <li> STYLE SHEETS </li>
+        <li>There are many images and each has a description.</li>
+        <li>I use a red flower as this website's favicon. Each page declares it.</li>
+        <li>I did not use and JS but there are folders for CSS and images.</li>
+        <li>I did not use any external libraries.</li>
+        <li>NU CHECKER</li>
+        <li>Admittedly, my site is mostly center-aligned on the horizontal. I think it turned out this way because I don't have many sections of long blocks of text.
+            I like the way the centered headers, images, and captions draw your eye along the page. When I do have long text-blocks, like character bios or form elements, they are usually left-aligned. 
+        </li>
+        <li>Spacing is consistent and text stays away from surrounding borders. </li>
+        <li>The header has a handwritten-style font while most other elements use Raleway.</li>
+        <li>There is a form for people wanting to join us to fill out. It can be reached from the "Apply" nav-bar link. It doesn't do anything yet, but ideally 
+            it would send the application to the members of the group and invite the newcomer to our online game.</li>
+        <li>The form above links to the website we use to play our D&D game online. </li>
+        <li>My code is consistently formatted and all variables use kebab-case</li>
+        <li>Hovering over the Bracer logo makes it do a spin animation. Also, hovering over the character images on the homepage has a subtle fade effect.</li>
+        <li>It is shared, confirmed in class.</li>
+        <li>File names are all lowercase.</li>
+        <li>Check out the lock up there! Thanks, Certbot.</li>
+        <li>This seems to work.</li>
+        <li>This seems to work.</li>
+        <li>Sometimes I worked for hours at a time, sometimes I only tweaked one small thing. But I made sure to push/pull after every work session.</li>
+        <li>Ok.</li>
     </ol>
 
 </body>
