--- a/doc.html
+++ b/doc.html
@@ -58,8 +58,8 @@
 
   <p class = "bio">
     Ashamed for almost causing his young nephew Jared’s death, Victor “Doc” Swatcher escaped to a quiet life on the island-city Typhon 
-    where he worked on a shipping vessel as a shipwright. That is until his ship was invaded by pirates thieving for a magic suit of armor. 
-    Doc used the armor to fight off the pirates and save his crew. With his new powers, he found the confidence to return and watch over 
+    where he worked on a shipping vessel as a shipwright. That is, until his ship was invaded by pirates thieving for a magic suit of armor
+    his crew was ferrying. Doc used the armor to fight off the pirates and save his crew. With his new powers, he found the confidence to return and watch over 
     Jared, albeit from a distance. On the field, Doc is happy to take a few hits for his friends: almost nothing gets through his armor. 
   </p>
 
