--- a/jared.html
+++ b/jared.html
@@ -62,7 +62,7 @@
   <p class = "bio">
     As a child, Jared was deathly ill. His mother, a powerful sorceress, made a pact with a demon; trading Jared’s soul for his father’s. 
     His uncle Doc was furious that his brother was being sacrificed, ignorant of the full situation, and nearly disrupted the ritual, which 
-    would have cost Jared’s life. After Doc fled because of this, Jared grew up extremely sheltered and without father figures. The demon who 
+    would have cost Jared’s life. After Doc fled because of this, Jared grew up extremely sheltered and without any father figures. The demon who 
     preserved Jared’s life sometimes speaks in his mind, which Jared mistakenly interprets as the words of his lost father. It also grants 
     Jared special abilities and weapons. Jared uses these to great effect in combat, though he’s still somewhat oblivious to the true extent 
     of the raw power he wields.
