Cleaned up css organization

--- a/crow.html
+++ b/crow.html
@@ -6,15 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crow Revache</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="stylesheet" href="css/crow.css">
   <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
-  <style>
-    body{
-      background: linear-gradient(180deg, rgba(8,21,52,1) 0%, rgba(238,243,255,1) 100%);
-    }
-    .info{
-      font-size: 0.63em;
-  }
-</style>
 </head>
 <body>
   <main>
@@ -48,6 +41,7 @@
     <p>Alignment: Lawful Evil</p>
   </div>
   <p class="tagline">The blind man with big plans</p>
+  <hr>
   <div class = "stats">
     <ul class = "statlist">
       <li class = "statlist-item">Strength: <span>??</span></li>
