--- a/doc.html
+++ b/doc.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doc Swatcher</title>
   <link rel="stylesheet" href="css/character-page.css">
-  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>  <style>
-    body {
-      background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
-    }
-  </style>
+  <link rel="stylesheet" href="css/doc.css">
+  <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
 </head>
 <body>
   <main>
@@ -44,7 +41,7 @@
     <p>Alignment: Neutral Good</p>
   </div>
   <p class="tagline">The quick-thinking old-timer</p>
-
+  <hr>
   <div class = "stats">
     <ul class = "statlist">
       <li class = "statlist-item">Strength: <span>12</span></li>
