--- a/dudo.html
+++ b/dudo.html
@@ -6,15 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dudo Perudo</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="stylesheet" href="css/dudo.css">
   <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
-  <style>
-    body{
-      background: linear-gradient(180deg, rgba(40,122,47,1) 0%, rgba(238,255,240,1) 100%);
-    }
-    img{
-      width: 50%;
-    }
-  </style>
 </head>
 <body>
   <main>
@@ -48,6 +41,7 @@
     <p>Alignment: Chaotic Neutral</p>
   </div>
   <p class="tagline">The natural-born assassin</p>
+  <hr>
   <div class = "stats">
     <ul class = "statlist">
       <li class = "statlist-item">Strength: <span>12</span></li>
