--- a/olek.html
+++ b/olek.html
@@ -6,12 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Olek</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="stylesheet" href="css/olek.css">
   <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
-  <style>
-    body{
-      background: linear-gradient(180deg, rgba(157,112,58,1) 0%, rgba(255,245,238,1) 100%);
-    }
-  </style>
 </head>
 <body>
   <main>
@@ -45,6 +41,7 @@
     <p>Alignment: Lawful Neutral</p>
   </div>
   <p class="tagline">The powerhouse chef</p>
+  <hr>
   <div class = "stats">
     <ul class = "statlist">
       <li class = "statlist-item">Strength: <span class="statvalhigh">20</span></li>
