--- a/report.html
+++ b/report.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Report</title> 
-    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/survey.css">
     <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
 </head>
 <body>
@@ -34,44 +35,46 @@
     </nav>
     <h1>Project Report</h1>
     <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
-    <ol>
-        <li>
+    <ol id = "report-list">
+        <li class = "report-item">
             I made my website for my Dungeons and Dragons group. We have been playing together for 
           about two years and frequently have friends join our campaign as guests or sometimes permanently. This website
           will help new players catch up with the lore and characters of our world. Plus it can serve as a reference for 
           existing players. 
         </li>
-        <li>
+        <li class = "report-item">
             Some of the images here were created by my. Others are in the public domain.
             Almost all text was written by me, though some was borrowed from friends (such as the quotes).
         </li>
-        <li>I have eight pages on the site if you count this one.</li>
-        <li>There is a header on each page which features the title of our game and a picture of our headquarters.</li>
-        <li>I have a nav-bar across each page.</li>
-        <li>I use a media query to remove the side columns on small screens.</li>
-        <li> STYLE SHEETS </li>
-        <li>There are many images and each has a description.</li>
-        <li>I use a red flower as this website's favicon. Each page declares it.</li>
-        <li>I did not use and JS but there are folders for CSS and images.</li>
-        <li>I did not use any external libraries.</li>
-        <li>NU CHECKER</li>
-        <li>Admittedly, my site is mostly center-aligned on the horizontal. I think it turned out this way because I don't have many sections of long blocks of text.
-            I like the way the centered headers, images, and captions draw your eye along the page. When I do have long text-blocks, like character bios or form elements, they are usually left-aligned. 
+        <li class = "report-item">I have eight pages on the site if you count this one.</li>
+        <li class = "report-item">There is a header on each page which features the title of our game and a picture of our headquarters.</li>
+        <li class = "report-item">I have a nav-bar across each page.</li>
+        <li class = "report-item">I use a media query to remove the side columns on small screens.</li>
+        <li class = "report-item">The "main.css" sheet has style elements used by all pages. Most other files are also shared between at least two documents, aside from small tweaks 
+            for individual character sheets.</li>
+        <li class = "report-item">There are many images and each has a description.</li>
+        <li class = "report-item">I use a red flower as this website's favicon. Each page declares it.</li>
+        <li class = "report-item">I did not use and JS but there are folders for CSS and images.</li>
+        <li class = "report-item">I did not use any external libraries.</li>
+        <li class = "report-item">NU CHECKER</li>
+        <li class = "report-item">Admittedly, my site has a good amount of center-alignmentment on the horizontal. I like the way the centered headers, images, and captions draw your eye along the page. 
+            When I have long text-blocks, like character bios and stats, they are usually left-aligned. 
         </li>
-        <li>Spacing is consistent and text stays away from surrounding borders. </li>
-        <li>The header has a handwritten-style font while most other elements use Raleway.</li>
-        <li>There is a form for people wanting to join us to fill out. It can be reached from the "Apply" nav-bar link. It doesn't do anything yet, but ideally 
+        <li class = "report-item">Spacing is consistent and text stays away from surrounding borders. </li>
+        <li class = "report-item">The header has a handwritten-style font while most other elements use Raleway.</li>
+        <li class = "report-item">There is a form for people wanting to join us to fill out. It can be reached from the "Apply" nav-bar link. It doesn't do anything yet, but ideally 
             it would send the application to the members of the group and invite the newcomer to our online game.</li>
-        <li>The form above links to the website we use to play our D&D game online. </li>
-        <li>My code is consistently formatted and all variables use kebab-case</li>
-        <li>Hovering over the Bracer logo makes it do a spin animation. Also, hovering over the character images on the homepage has a subtle fade effect.</li>
-        <li>It is shared, confirmed in class.</li>
-        <li>File names are all lowercase.</li>
-        <li>Check out the lock up there! Thanks, Certbot.</li>
-        <li>This seems to work.</li>
-        <li>This seems to work.</li>
-        <li>Sometimes I worked for hours at a time, sometimes I only tweaked one small thing. But I made sure to push/pull after every work session.</li>
-        <li>Ok.</li>
+        <li class = "report-item">The form above links to the website we use to play our D&D game online. </li>
+        <li class = "report-item">My code is consistently formatted and all variables use kebab-case</li>
+        <li class = "report-item">Hovering over the Bracer logo makes it do a spin animation. Also, hovering over the character images on the homepage has a subtle fade effect.</li>
+        <li class = "report-item">It is shared, confirmed in class.</li>
+        <li class = "report-item">File names are all lowercase.</li>
+        <li class = "report-item">Check out the lock up there! Thanks, Certbot.</li>
+        <li class = "report-item">This seems to work.</li>
+        <li class = "report-item">This seems to work.</li>
+        <li class = "report-item">Sometimes I worked for hours at a time, sometimes I only tweaked one small thing. But I made sure to push/pull after every work session. The last day might 
+            have the most commits, I'm not sure, but that doesn't mean I added most of the content that day.</li>
+        <li class = "report-item">Ok.</li>
     </ol>
 
 </body>
