--- a/jared.html
+++ b/jared.html
@@ -6,16 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jared Lacey</title>
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="stylesheet" href="css/jared.css">
   <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
-  <style>
-    body {
-      background: linear-gradient(180deg, rgba(68,79,230,1) 0%, rgba(242,238,255,1) 100%);
-    }
-    img{
-      width: 50%;
-      padding: 1em;
-    }
-  </style>
 </head>
 <body>
   <main>
@@ -49,6 +41,7 @@
     <p>Alignment: Chaotic Good</p>
   </div>
   <p class="tagline">The well-meaning troubled teen</p>
+  <hr>
   <div class = "stats">
     <ul class = "statlist">
       <li class = "statlist-item">Strength: <span>12</span></li>
