--- a/miya.html
+++ b/miya.html
@@ -5,16 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miya Areno</title>
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/character-page.css">
+  <link rel="stylesheet" href="css/miya.css">
   <link rel="shortcut icon" type="image/png" href="images/rose.png"/>
-  <style>
-    body {
-      background: linear-gradient(180deg, rgba(28,83,85,1) 0%, rgba(230,244,242,1) 100%);
-    }
-    .info{
-      font-size: 0.8em;
-    }
-  </style>
 </head>
 <body>
   <main>
@@ -47,16 +41,16 @@
     <p>Played by: Ender</p>
     <p>Alignment: Lawful Good</p>
   </div>
-  <p class="tagline">The level-headed leader</p>
-  
-<ul class = "statlist">
-      <li class = "statlist-item">Strength: <span>15</span></li>
-      <li class = "statlist-item">Dexterity: <span>12</span></li>
-      <li class = "statlist-item">Constitution: <span>14</span></li>
-      <li class = "statlist-item">Intelligence: <span>12</span></li>
-      <li class = "statlist-item">Wisdom: <span class="statvalhigh">16</span></li>
-      <li class = "statlist-item">Charisma: <span>12</span></li>
-    </ul>
+  <h3 class="tagline">The level-headed leader</h3>
+  <hr>
+  <ul class = "statlist">
+    <li class = "statlist-item">Strength: <span>15</span></li>
+    <li class = "statlist-item">Dexterity: <span>12</span></li>
+    <li class = "statlist-item">Constitution: <span>14</span></li>
+    <li class = "statlist-item">Intelligence: <span>12</span></li>
+    <li class = "statlist-item">Wisdom: <span class="statvalhigh">16</span></li>
+    <li class = "statlist-item">Charisma: <span>12</span></li>
+  </ul>
 
   <p class = "bio">
     Miya studied law in Farrowdale before her beloved was killed in front of her by a demented witch. Miya channeled 
