--- a/crow.html
+++ b/crow.html
@@ -41,7 +41,7 @@
     <p>Played by: Carson (Dungeon Master)</p>
     <p>Alignment: Lawful Evil</p>
   </div>
-  <p class="tagline">The blind man with big plans</p>
+  <h3 class="tagline">The blind man with big plans</h3>
   <hr>
   <div class = "stats">
     <ul class = "statlist">
