--- a/doc.html
+++ b/doc.html
@@ -41,7 +41,7 @@
     <p>Played by: Jack</p>
     <p>Alignment: Neutral Good</p>
   </div>
-  <p class="tagline">The quick-thinking old-timer</p>
+  <h3 class="tagline">The quick-thinking old-timer</h3>
   <hr>
   <div class = "stats">
     <ul class = "statlist">
