--- a/dudo.html
+++ b/dudo.html
@@ -41,7 +41,7 @@
     <p>Played by: Bradley</p>
     <p>Alignment: Chaotic Neutral</p>
   </div>
-  <p class="tagline">The natural-born assassin</p>
+  <h3 class="tagline">The natural-born assassin</h3>
   <hr>
   <div class = "stats">
     <ul class = "statlist">
