--- a/olek.html
+++ b/olek.html
@@ -41,7 +41,7 @@
     <p>Played by: Jordan</p>
     <p>Alignment: Lawful Neutral</p>
   </div>
-  <p class="tagline">The powerhouse chef</p>
+  <h3 class="tagline">The powerhouse chef</h3>
   <hr>
   <div class = "stats">
     <ul class = "statlist">
