--- a/jared.html
+++ b/jared.html
@@ -41,7 +41,7 @@
     <p>Played by: Arman</p>
     <p>Alignment: Chaotic Good</p>
   </div>
-  <p class="tagline">The well-meaning troubled teen</p>
+  <h3 class="tagline">The well-meaning troubled teen</h3>
   <hr>
   <div class = "stats">
     <ul class = "statlist">
